# blackbox-terminal

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  com.raggesilver.BlackBox.json  com.raggesilver.Terminal.json  meson.build  meson_options.txt  test.sh
.gitlab/issue_templates/: bug.md  feature_request.md
.gitlab/merge_request_templates/: release.md
data/: com.raggesilver.BlackBox.appdata.xml.in  com.raggesilver.BlackBox.desktop.in  com.raggesilver.BlackBox.gschema.xml  com.raggesilver.BlackBox.metainfo.xml.in  com.raggesilver.Terminal.appdata.xml.in  com.raggesilver.Terminal.desktop.in  com.raggesilver.Terminal.gschema.xml  meson.build
data/icons/: meson.build
data/schemes/: adwaita-dark.json  adwaita-light.json  dracula-light.json  dracula.json  japanesque.json  monokai.json
po/: LINGUAS  POTFILES  cs.po  de.po  es.po  fr.po  it.po  meson.build  nl.po  pt_BR.po  ru.po  sv.po  tr.po  zh_CN.po
src/: Application.vala  CommandLine.vala  blackbox-link-system-fonts  blackbox.gresource.xml  config.vala.in  main.vala  meson.build  style-dark.css  style.css  terminal.gresource.xml
src/gtk/: header-bar.ui  help-overlay.ui  preferences-window.ui  preferences-window2.ui  preferences-window3.ui  preferences-window4.ui  search-toolbar.ui  search-window.ui  shortcut-dialog.ui  shortcut-editor.ui  shortcut-row.ui  style-switcher.ui  tab-menu.ui  terminal-menu.ui  terminal-tab.ui
src/layouts/: about-dialog.ui  menu.ui  preferences-window.ui  window.ui
src/resources/: style.css
src/services/: ProcessWatcher.vala  Scheme.vala  Settings.vala  Shortcuts.vala  ThemeProvider.vala  meson.build
src/utils/: Constants.vala  Css.vala  Dialogs.vala  File.vala  Shortcuts.vala  Terminal.vala  Widget.vala  X11.vala  meson.build
src/vapi/: config.vapi  libpcre2-8.vapi
src/widgets/: AboutDialog.vala  ColorSchemeThumbnail.vala  HeaderBar.vala  PreferencesWindow.vala  PreferencesWindow2.vala  SearchToolbar.vala  SearchWindow.vala  ShortcutDialog.vala  ShortcutEditor.vala  StyleSwitcher.vala  Terminal.vala  TerminalTab.vala  Window.vala  meson.build
src/widgets/Pane/: Pane.vala
toolbox/: main.c  meson.build
