icondir = join_paths(get_option('datadir'), 'icons/hicolor')
pkgicondir = join_paths(get_option('datadir'), 'terminal/icons/hicolor')

install_subdir('hicolor/scalable', install_dir: pkgicondir)

install_data(['hicolor/scalable/apps/com.raggesilver.Terminal.svg'],
             install_dir: join_paths(icondir, 'scalable/apps'))
